--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-requests
-python-dotenv
-pillow
-openai
+streamlit>=1.20.0
+requests>=2.28.0
+python-dotenv>=1.0.0
+pillow>=9.5.0
+openai>=1.0.0
