--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 streamlit>=1.20.0
 requests>=2.28.0
-python-dotenv>=1.0.0
 pillow>=9.5.0
 openai>=1.0.0
+networkx>=3.0
+pyvis>=0.3.0
+plotly>=5.0.0
+
 
 
