--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 streamlit==1.36.0
-requests
-pillow
-plotly
+requests==2.31.0
+pillow==10.0.1
+plotly==5.16.0
+pandas==2.2.2
+networkx==3.1
 openai==0.28.1
-pandas
-plotly
-
