--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-streamlit==1.36.0
-requests==2.31.0
-pillow==10.0.1
-plotly==5.16.0
+streamlit==1.38.0
 pandas==2.2.2
-networkx==3.1
-openai==0.28.1
+numpy==1.26.4
+requests==2.31.0
+plotly==5.22.0
+networkx==3.2.1
+pyvis==0.3.2
+Pillow==10.3.0
+scikit-learn==1.4.2
