--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-streamlit==1.38.0
-requests
-Pillow
-plotly
-pandas
-pyvis==0.3.2
-networkx==2.8.8
-numpy
+streamlit>=1.18.0
+requests>=2.28.0
+Pillow>=9.0.0
+plotly>=5.6.0
+pandas>=1.5.0
+networkx>=3.0
+openai>=0.29.0
