--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit>=1.18.0
-requests>=2.28.0
-Pillow>=9.0.0
-plotly>=5.6.0
-pandas>=1.5.0
-networkx>=3.0
-openai>=0.29.0
+streamlit==1.37.0
+pandas==2.1.4
+plotly==5.18.0
+pyvis==0.3.2
+networkx==3.2.1
+requests==2.31.0
+Pillow==9.5.0
+numpy==1.26.4
